--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-uglify-es": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "hygen": "^6.2.11",
-    "sass": "^1.69.3"
+    "sass": "^1.69.3",
+    "swiper": "^11.0.4"
   }
 }
