--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp --production",
+    "deploy": "gulp --production && gulp deploy",
     "new:page": "hygen new page",
     "new:block": "hygen new component"
   },
@@ -16,6 +17,7 @@
     "@babel/preset-env": "^7.23.2",
     "browser-sync": "^2.29.3",
     "del": "^6.1.1",
+    "gh-pages": "^6.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
