--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "hygen": "^6.2.11",
     "sass": "^1.69.3",
     "swiper": "^11.0.4"
+  },
+  "dependencies": {
+    "imask": "^7.1.3",
+    "save-dev": "^0.0.1-security"
   }
 }
