--- a/package.json
+++ b/package.json
@@ -38,11 +38,10 @@
     "gulp-uglify-es": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "hygen": "^6.2.11",
-    "sass": "^1.69.3",
-    "swiper": "^11.0.4"
-  },
-  "dependencies": {
     "imask": "^7.1.3",
-    "save-dev": "^0.0.1-security"
+    "sass": "^1.69.3",
+    "swiper": "^11.0.4",
+    "underscore": "^1.13.6",
+    "validate.js": "^0.13.1"
   }
 }
