--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-webp": "^4.0.1",
     "hygen": "^6.2.11",
     "imask": "^7.1.3",
+    "micromodal": "^0.4.10",
     "sass": "^1.69.3",
     "swiper": "^11.0.4",
     "underscore": "^1.13.6",
